fix: dark mode

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@
 :root{
     --text-shadow:#888;
 }
+/* shadow */
+:root{
+    --shadow-color:rgb(0, 0, 0);
+}
 /* background colors */
 :root{
     --primary-bg: #fff;
@@ -58,7 +62,10 @@
 /* dark mode */
 
 @media (prefers-color-scheme: dark) {
-
+    /* shadow */
+    :root{
+        --shadow-color:#fff;
+    }
     /* text shadow */
     :root{
         --text-shadow:#515151;
@@ -1271,8 +1278,21 @@ section#modal-container {
     gap:1rem;
 
 }
+#nt-playback-container > img:hover 
+{
+    cursor:pointer;
+}
 #nt-playback-container > img {
 height:50px;
+
+border-radius: 50%;
+
+background:#fff;
+
+border:.5px solid #000;
+box-shadow:0 .25rem 3.5px .9px var(--shadow-color);
+
+padding:8px;
 }
 #nt-playback-container {
     /* border:2px solid green; */
@@ -1293,5 +1313,6 @@ height:50px;
 
 .nt-row > p {
     font-size:18pt;
+    color:var(--primary-color)
 }
 
